--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -6,18 +6,6 @@ block docVars
 block hero-title
   h1 Tabs
 
-block hero-example
-  ul.tabs#tab-example1
-    li.open: a(href="#land") Land
-    li: a(href="#air") Air
-    li: a(href="#sea") Sea
-
-  article.tab-content#land Turtle
-
-  article.tab-content#air Bird
-
-  article.tab-content#sea Fish
-
 block basic
   :markdown
     Creating a tab is the same as creating a basic HTML document
@@ -32,7 +20,7 @@ block basic
     li: a(href="#old") Old
     li: a(href="#ancient") Ancient
 
-  .tab-articles
+  .tab_pane_container
     article#modern Internet
     article#old Encyclopedia
     article#ancient Papyrus
@@ -40,27 +28,29 @@ block basic
   :markdown
     <span>
 
-        <ul class="tabs" id="animals">
+        <ul class="tabs" id="ages">
           <li class="open">
-            <a href="#land">Land</a>
+            <a href="#modern">Modern</a>
           </li>
           <li>
-            <a href="#air">Air</a>
+            <a href="#old">Old</a>
           </li>
           <li>
-            <a href="#sea">Sea</a>
+            <a href="#ancient">Ancient</a>
           </li>
         </ul>
 
-        <article id="land">
-          Turtle
-        </article>
-        <article id="air">
-          Bird
-        </article>
-        <article id="sea">
-          Fish
-        </article>
+        <div class="tab_pane_container">
+          <article id="modern">
+            Internet
+          </article>
+          <article id="old">
+            Encyclopedia
+          </article>
+          <article id="ancient">
+            Papyrus
+          </article>
+        </div>
 
   .if-semantic
     :markdown
@@ -69,22 +59,16 @@ block basic
           .tabs {
             @include tabs();
           }
+          .tab_pane_container {
+            @include tab_pane_container();
+          }
 
   :markdown
     You'll also need to tell `k$.tabs()` the selector of the ul that will become the tab bar.
 
-        k$.tabs('animals');
-
-  .if-semantic
-    :markdown
-      Tab styling can be applied via the `tabs()` mixin.
-
-          .tabs {
-            @include tabs();
-          }
+        k$.tabs('ages');
 
 block postJS
   script.
     k$.nav('.docs-nav')
-    k$.tabs('#tab-example1')
     k$.tabs('#tab-example2')
