--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tabs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tabs.sass
@@ -4,7 +4,7 @@
 
   li
     margin: 0
-      left: -1px
+      right: -1px
       bottom: -1px
 
     &.open
@@ -26,6 +26,12 @@
 
 =tab_pane_container-default
   +root-element
+  background: white
   border-color: $secondary-color
+  border-top: 0
+  border-top-left-radius: 0
+  border-top-right-radius: 0
+  padding: $space
+  margin-top: -$space
 
   @content
