Improving positioning of modal on mobile

--- a/lib/sass/components/_modals.sass
+++ b/lib/sass/components/_modals.sass
@@ -3,9 +3,9 @@
   position: fixed
   box-shadow: 0px 0px 99999px 99999px rgba(0, 0, 0, 0.35), 0px 0px 25px rgba(0, 0, 0, 0.5)
   top: 15px
-  top: 1vh
-  width: 98%
+  top: 5vh
   left: 2%
+  right: 2%
   margin: 0px auto
   display: none
   background: white
