--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -5,6 +5,10 @@
 // what. This include should be included near the end of the
 // import chain but before kickstart.sass to accomplish this.
 
+body
+  &.dismiss-modal
+    cursor: pointer
+
 // Buttons
 // -------
 
