--- a/rails/app/assets/stylesheets/kickstart_rails/components/_modals.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_modals.sass
@@ -1,11 +1,12 @@
 =modal-default()
   +root-element
+  padding: $space
   position: fixed
   box-shadow: 0px 0px 99999px 99999px rgba(0, 0, 0, 0.35), 0px 0px 25px rgba(0, 0, 0, 0.5)
   top: 15px
-  top: 1vh
-  width: 98%
+  top: 5vh
   left: 2%
+  right: 2%
   margin: 0px auto
   display: none
   background: white
@@ -25,5 +26,15 @@
     width: 650px
     left: 50%
     margin-left: -325px
+
+  > header
+    +alert
+    background: $secondary-color
+    border-color: $secondary-color
+    color: $default-font-color
+    border-bottom-left-radius: 0
+    border-bottom-right-radius: 0
+    margin: -$space
+      bottom: $space
 
   @content
