--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -63,9 +63,11 @@ html(lang='en')
                 a(href="#") Submenu link 3.2
 
     #test-modal
+      a#test-modal-close(data-modal-close) &times;
       h1 Hi, I'm a modal.
 
     #test-modal-2
+      a(data-modal-close) &times;
       h1 Hi, I'm a modal as well.
 
     button#ddbutton1 Button
