--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -5,7 +5,8 @@ block page-stylesheet
 
 block hero
   header.index-hero
-    img.logo(src="/img/kickstart.png")
+    - var xml = fs.readFileSync('lib/img/kickstart.svg')
+    div!= xml
     h5 A front-end framework that loves to be extended
 
 block content
@@ -25,13 +26,13 @@ block content
     main.second-pitch
       .feature
         h1 Just JS and CSS
-        p Kickstart is as simple as one JavaScript and one CSS file. 
+        p Kickstart is as simple as one JavaScript and one CSS file.
           | <strong>No jQuery needed.</strong>
           | Native support for node.js and Rails is included.
 
       .feature
         h1 For modern browsers
-        p Kickstart targets modern browsers to give you the latest, most robust features. 
+        p Kickstart targets modern browsers to give you the latest, most robust features.
           | For targeting older browsers, former releases of Kickstart are made available
           | via the documentation.
 
@@ -54,6 +55,6 @@ block content
 
       .feature
         h1 Three
-      
+
       .feature
         h1 Four
