--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -22,11 +22,11 @@
 // ----------
 
 .main-navigation
-  +navbar($collapse: true, $layout: 'fluid-fixed')
+  +navbar($collapse: true, $layout: 'fluid-fixed', $background-color: white)
 
-  img.logo
+  svg
     height: 30px
-    margin-left: 8px
+    fill: map-get($brown, darkest)
 
 // Footer
 // ------
