Implementing docs theme, but still a lot of integration needed.

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -22,7 +22,7 @@
 // ----------
 
 .main-navigation
-  +navbar($collapse: true, $layout: 'fluid-fixed', $background-color: white)
+  +navbar($collapse: true, $layout: 'fluid', $background-color: white)
 
   svg
     height: 30px
