--- a/lib/jade/docs/3.x/ui/icons/index.jade
+++ b/lib/jade/docs/3.x/ui/icons/index.jade
@@ -1,9 +1,9 @@
-extends ../../fullpage-layout
+extends ../../_layout
 
 block hero-title
   h1 Icons
 
-block fullPane
+block documents
   :markdown
     In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
     Icons are not part of the standard bundle for Kickstart.
