--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
@@ -38,7 +38,7 @@ $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
 $body-font-family:    'Lato', helvetica neue, sans-serif
 $base-font-size:      16px
-$default-font-color:  map-get($gray, darkest)
+$default-font-color:  map-get($black, lightest)
 $default-line-height: 1.4rem
 
 // --------------------------
