--- a/lib/jade/docs/3.x/ui/icons/index.jade
+++ b/lib/jade/docs/3.x/ui/icons/index.jade
@@ -4,9 +4,34 @@ block hero-title
   h1 Icons
 
 block documents
-  :markdown
-    In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
-    Icons are not part of the standard bundle for Kickstart.
+  .document
+    article.article
+      :markdown
+        # Hey.
 
-    I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
-    project needs icons.
+        In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
+        Icons are not part of the standard bundle for Kickstart.
+
+        I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
+        project needs icons.
+
+    aside.code
+      :markdown
+        <span>
+
+            <h1>Hello world</h1>
+
+  .document
+    article.article
+      :markdown
+        In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
+        Icons are not part of the standard bundle for Kickstart.
+
+        I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
+        project needs icons.
+
+    aside.code
+      :markdown
+        <span>
+
+            <h1>Hello world</h1>
