--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -5,12 +5,14 @@
 @import themes/_canary
 
 .index-hero
-  background: white
+  background: map-get($brown, darkest)
   padding: ($space * 2)
   margin:
     top: -$space
     bottom: $space
-  border-bottom: 1px solid map-get($brown, light)
+  border:
+    bottom: 1px solid map-get($brown, light)
+    top: 2px solid map-get($colors, red)
 
   @media screen and (min-width: $desktop)
     padding: ($space * 4)
@@ -21,12 +23,12 @@
     margin: 0px auto
     max-width: 90%
     width: 700px
-    fill: map-get($colors, yellow)
+    fill: white
 
   h5
     +heading-sm
     text-align: center
-    color: map-get($brown, darkest)
+    color: map-get($brown, light)
 
     @media screen and (min-width: $desktop)
       +heading-md
