--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -22,7 +22,7 @@
 // ----------
 
 .main-navigation
-  +navbar($collapse: true, $layout: 'fluid-fixed', $background-color: white)
+  +navbar($collapse: true, $layout: 'fluid', $background-color: white)
 
   svg
     height: 30px
