--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
@@ -5,5 +5,6 @@
 @import themes/_canary
 
 .docs-nav
-  +navbar($collapse: true)
+  +navbar($collapse: true, $layout: 'fluid')
+  margin-top: -$space
 
