Playing with videos on home page

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -24,28 +24,27 @@ block content
 
     main.second-pitch
       .feature
-        h1 Just JS and CSS
-        p Kickstart is as simple as one JavaScript and one CSS file.
-          | <strong>No jQuery needed.</strong>
-          | Native support for node.js and Rails is included.
+        video(src="/videos/overriding-component.mp4" autoplay="autoplay" loop)
+        h1 Modular and clean
+        p Kickstart components are defined as modules, which can be overriden or extended.
 
       .feature
+        video(src="/videos/overriding-component.mp4" autoplay="autoplay" loop)
         h1 For modern browsers
         p Kickstart targets modern browsers to give you the latest, most robust features.
           | For targeting older browsers, former releases of Kickstart are made available
           | via the documentation.
 
       .feature
-        h1 Design across devices
-        iframe(width="360" height="250" src="//www.youtube.com/embed/Rv5f_v5gqw4" frameborder="0" allowfullscreen)
-
-        p *This video is not of a Kickstart project, but does exemplify similar
-        p functionality when using Gulp.*
+        video(src="/videos/overriding-component.mp4" autoplay="autoplay" loop)
+        h1 Design across devices 
 
     main.third-pitch
       .feature
-        h1 One
-        p Paragraph
+        h1 Just JS and CSS
+        p Kickstart is as simple as one JavaScript and one CSS file.
+          | <strong>No jQuery needed.</strong>
+          | Native support for node.js and Rails is included.
 
       .feature
         h1 Add components and themes with the Kickstart Store.
