--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -23,7 +23,17 @@
 // ----------
 
 .main-navigation
-  +navbar($collapse: true, $layout: 'fluid', $background-color: map-get($brown, darkest))
+  +navbar($collapse: true, $layout: 'fluid', $background-color: transparent)
+
+  nav.expand
+    background: white
+    color: map-get($black, light)
+
+    > ul > li > a:not([role=button])
+      color: map-get($black, light)
+    
+    svg
+      fill: map-get($black, light)
 
   svg
     height: 30px
