--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -9,30 +9,35 @@ video
   margin-bottom: -$space/2
 
 .index-hero
-  background: map-get($brown, darkest)
+  background-color: white
+  background: url('/img/hero.jpg')
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: 200% 100%
   padding: ($space * 2)
   margin:
-    top: -$space
-    bottom: $space
-  border:
-    bottom: 1px solid map-get($brown, light)
-    top: 2px solid map-get($colors, red)
+    top: -70px
+    bottom: $space 
+  padding-top: 70px
 
   @media screen and (min-width: $desktop)
     padding: ($space * 4)
     margin-bottom: $space * 4
+    height: 500px
+    background-size: 1400px 100%
 
   svg
     display: block
     margin: 0px auto
-    max-width: 90%
+    max-width: 70%
     width: 700px
     fill: white
 
-  h5
+  h2
     +heading-sm
     text-align: center
-    color: map-get($brown, light)
+    color: white
+    opacity: 0.75
 
     @media screen and (min-width: $desktop)
       +heading-md
