Tweaks to hero image

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -18,6 +18,9 @@
 
 #screen
   +screen
+  max-width: $xl-monitor
+  box-shadow: 0px 0px $space map-get($black, lighter)
+  margin: 0px auto
 
 // Navigation
 // ----------
