--- a/lib/jade/docs/3.x/ui/icons/index.jade
+++ b/lib/jade/docs/3.x/ui/icons/index.jade
@@ -3,6 +3,9 @@ extends ../../_layout
 block hero-title
   h1 Icons
 
+block variables
+  - var showFooter = false
+
 block documents
   .document
     article.article
