--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -7,7 +7,7 @@ block hero
   header.index-hero
     - var xml = fs.readFileSync('lib/img/kickstart.svg')
     div!= xml
-    h2 A front-end framework that loves to be extended
+    h2 The framework we've been waiting for.
 
 block content
   article.wrapper 
