--- a/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
@@ -4,37 +4,49 @@
 
 @import themes/_canary
 
+video
+  max-width: 100%
+  margin-bottom: -$space/2
+
 .index-hero
-  background: map-get($brown, darkest)
+  background-color: white
+  background: url('/img/hero.jpg')
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: 200% 100%
   padding: ($space * 2)
   margin:
-    top: -$space
-    bottom: $space
-  border:
-    bottom: 1px solid map-get($brown, light)
-    top: 2px solid map-get($colors, red)
+    top: -70px
+    bottom: $space 
+  padding-top: 70px
 
   @media screen and (min-width: $desktop)
     padding: ($space * 4)
     margin-bottom: $space * 4
+    height: 500px
+    background-size: 1400px 100%
 
   svg
     display: block
     margin: 0px auto
-    max-width: 90%
+    max-width: 70%
     width: 700px
     fill: white
 
-  h5
+  h2
     +heading-sm
     text-align: center
-    color: map-get($brown, light)
+    color: white
+    opacity: 0.75
 
     @media screen and (min-width: $desktop)
       +heading-md
 
 .first-pitch, .second-pitch, .third-pitch
   +row
+
+  @media screen and (min-width: $tablet)
+    margin-bottom: $space * 3
 
   h1
     +heading-md
@@ -50,10 +62,16 @@
   .feature
     +column('third')
 
+  h1
+    +heading-rg
+
 .third-pitch
   .feature
     +column('half')
 
     @media screen and (min-width: $desktop)
       +column(3)
+
+    h1
+      +heading-sm
 
