Docs fixing works now

--- a/lib/jade/docs/3.x/_layout.jade
+++ b/lib/jade/docs/3.x/_layout.jade
@@ -18,6 +18,7 @@ block header
 block content
   //- Below tablet, this is a wrapping container.
   .fixed-area
+    #marker
 
     //- Two main containers here, each are fixed to the screen
 
